@@ -71,7 +71,7 @@ class Groups_Admin_User_Profile {
 			if ( current_user_can( GROUPS_ADMINISTER_GROUPS ) ) {
 				$output = '<h3>' . _x( 'Groups', 'Groups section heading (add user)', 'groups' ) . '</h3>';
 				$groups_table = _groups_get_tablename( 'group' );
-				if ( $groups = apply_filters( 'groups_add_new_user', $wpdb->get_results( "SELECT * FROM $groups_table ORDER BY name" ) ) ) {
+				if ( $groups = apply_filters( 'groups_admin_user_profile_user_new_form_groups', $wpdb->get_results( "SELECT * FROM $groups_table ORDER BY name" ) ) ) {
 					$output .= '<style type="text/css">';
 					$output .= '.groups .selectize-input { font-size: inherit; }';
 					$output .= '</style>';
@@ -112,7 +112,7 @@ class Groups_Admin_User_Profile {
 				if ( isset( $screen->id ) && $screen->id === 'user' ) {
 					if ( current_user_can( GROUPS_ADMINISTER_GROUPS ) ) {
 						$groups_table = _groups_get_tablename( 'group' );
-						if ( $groups = apply_filters( 'groups_user_register', $wpdb->get_results( "SELECT * FROM $groups_table" ) ) ) {
+						if ( $groups = apply_filters( 'groups_admin_user_profile_user_register_groups', $wpdb->get_results( "SELECT * FROM $groups_table" ) ) ) {
 							$user_group_ids = isset( $_POST['group_ids'] ) && is_array( $_POST['group_ids'] ) ? $_POST['group_ids'] : array();
 							foreach( $groups as $group ) {
 								if ( in_array( $group->group_id, $user_group_ids ) ) {
@@ -169,7 +169,7 @@ class Groups_Admin_User_Profile {
 			$user = new Groups_User( $user->ID );
 			$user_groups = $user->groups;
 			$groups_table = _groups_get_tablename( 'group' );
-			if ( $groups = apply_filters( 'groups_user_profile', $wpdb->get_results( "SELECT * FROM $groups_table ORDER BY name" ), $user->ID ) ) {
+			if ( $groups = apply_filters( 'groups_admin_user_profile_edit_user_profile_groups', $wpdb->get_results( "SELECT * FROM $groups_table ORDER BY name" ), $user->ID ) ) {
 				$output .= '<style type="text/css">';
 				$output .= '.groups .selectize-input { font-size: inherit; }';
 				$output .= '</style>';
@@ -219,7 +219,7 @@ class Groups_Admin_User_Profile {
 		global $wpdb;
 		if ( current_user_can( GROUPS_ADMINISTER_GROUPS ) ) {
 			$groups_table = _groups_get_tablename( 'group' );
-			if ( $groups = apply_filters( 'groups_user_profile_update', $wpdb->get_results( "SELECT * FROM $groups_table" ), $user_id ) ) {
+			if ( $groups = apply_filters( 'groups_admin_user_profile_edit_user_profile_update_groups', $wpdb->get_results( "SELECT * FROM $groups_table" ), $user_id ) ) {
 				$user_group_ids = isset( $_POST['group_ids'] ) && is_array( $_POST['group_ids'] ) ? $_POST['group_ids'] : array();
 				foreach( $groups as $group ) {
 					if ( in_array( $group->group_id, $user_group_ids ) ) {
