@@ -154,7 +154,7 @@ class Groups_Admin_Users {
 		if ( ( $pagenow == 'users.php' ) && empty( $_GET['page'] ) ) {
 			// groups select
 			$groups_table = _groups_get_tablename( 'group' );
-			if ( $groups = apply_filters( 'groups_manage_users', $wpdb->get_results( "SELECT * FROM $groups_table ORDER BY name" ) ) ) {
+			if ( $groups = apply_filters( 'groups_admin_users_restrict_manage_users_groups', $wpdb->get_results( "SELECT * FROM $groups_table ORDER BY name" ) ) ) {
 				$groups_select = sprintf(
 					'<select id="user-groups" class="groups" name="group_ids[]" multiple="multiple" placeholder="%s" data-placeholder="%s">',
 					esc_attr( __( 'Choose groups &hellip;', 'groups' ) ) ,
@@ -222,12 +222,14 @@ class Groups_Admin_Users {
 				esc_attr( __( 'Choose groups &hellip;', 'groups' ) )
 			);
 			$user_group_table = _groups_get_tablename( 'user_group' );
-			$groups = apply_filters( 'groups_view_users', Groups_Group::get_groups( array( 'order_by' => 'name', 'order' => 'ASC' ) ) );
+			$groups = apply_filters( 'groups_admin_users_views_users_groups', Groups_Group::get_groups( array( 'order_by' => 'name', 'order' => 'ASC' ) ) );
 			$user_counts = array();
-			$counts = apply_filters('groups_view_users_count', $wpdb->get_results( "SELECT COUNT(user_id) AS count, group_id FROM $user_group_table GROUP BY group_id" ) );
+			$counts = apply_filters('groups_admin_users_views_users_counts', $wpdb->get_results( "SELECT COUNT(user_id) AS count, group_id FROM $user_group_table GROUP BY group_id" ) );
 			if ( !empty( $counts ) && is_array( $counts ) ) {
 				foreach( $counts as $count ) {
-					$user_counts[$count->group_id] = $count->count;
+					if ( isset( $user_counts[$count->group_id] ) ) {
+						$user_counts[$count->group_id] = $count->count;
+					}
 				}
 			}
 			foreach( $groups as $group ) {
